Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -4076,8 +4076,8 @@ msgstr ""
 #: pages/public/signup.vue
 #: compensation/index.html
 #: competition/index.html
-#: new_ranks/index.html
 #: reach/index.html
+#: new_ranks/index.html
 #: receipts/italian_receipt.html
 #: reports/index.html
 #: track_results/index.html
@@ -8392,9 +8392,9 @@ msgstr ""
 #: competition/index.html
 #: invoices/invoice_statement.html
 #: negative_balances/index.html
-#: new_ranks/index.html
 #: pay_bonus/index.html
 #: reach/index.html
+#: new_ranks/index.html
 #: receipts/booking_receipt.html
 #: receipts/commission_statement.html
 #: receipts/hotel_booking_receipt.html
@@ -11187,8 +11187,8 @@ msgstr ""
 #: communications/view.html
 #: compensation/index.html
 #: email_notifications/index.html
-#: webinar_recordings/index.html
 #: track_growth/index.html
+#: webinar_recordings/index.html
 msgid "Search"
 msgstr ""
 
@@ -13124,8 +13124,8 @@ msgstr ""
 #: compensation/index.html
 #: receipts/italian_commission.html
 #: receipts/italian_receipt.html
-#: upgrade/index.html
 #: track_growth/index.html
+#: upgrade/index.html
 msgid "Total"
 msgstr ""
 
@@ -17880,6 +17880,27 @@ msgid ""
 "times:"
 msgstr ""
 
+#: Course Questions
+msgid ""
+" Michael suggests you take a careful look at what distracts you and "
+"interrupts your correct focus. He recommends you:"
+msgstr ""
+
+#: Course Questions
+msgid ""
+"True or False? The more you focus on learning how to become your best self "
+"and achieve your goals, the more positive impact you'll have."
+msgstr ""
+
+#: Course Questions
+msgid ""
+"True or False? Michael recognizes that many people have said yes to "
+"everything, and that's why they're miserable. He wants you to say no, so "
+"you can check requests against your Vision and Mission. However,  Michael "
+"doesn't want you to say yes or commit to any projects that take you off "
+"track."
+msgstr ""
+
 #: Course Questions (reasons)
 msgid ""
 "The consistent and continuous enrollment of new direct Partners and "
@@ -19309,6 +19330,28 @@ msgstr ""
 
 #: Course Questions (reasons)
 msgid "Correct, All of the above"
+msgstr ""
+
+#: Course Questions (reasons)
+msgid "You must first be clear about what you need and want to focus on.  "
+msgstr ""
+
+#: Course Questions (reasons)
+msgid "Correct! All of the above."
+msgstr ""
+
+#: Course Questions (reasons)
+msgid "Correct! True!"
+msgstr ""
+
+#: Course Questions (reasons)
+msgid ""
+"B WRONG! You are NOT born to do everything on your own.\n"
+"A and C are correct\n"
+msgstr ""
+
+#: Course Questions (reasons)
+msgid "Correct! All of the above"
 msgstr ""
 
 #: Course Answers
@@ -21438,6 +21481,27 @@ msgstr ""
 
 #: Course Answers
 msgid "Take better care of yourself and ask for help"
+msgstr ""
+
+#: Course Answers
+msgid "Only have one Social Media service on your mobile phone. "
+msgstr ""
+
+#: Course Answers
+msgid "A, B and C"
+msgstr ""
+
+#: Course Answers
+msgid ""
+"Have daily conversations with those you know and do not know, on and "
+"offline."
+msgstr ""
+
+#: Course Answers
+msgid ""
+"Tell them your inCruises Love story. Next, invite them to watch your "
+"marketing video to learn more, and then invite them to register at your "
+"personalized website."
 msgstr ""
 
 #: Support Departments
