Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -1845,10 +1845,6 @@ msgstr ""
 msgid "About Us"
 msgstr ""
 
-#: pages/public/about.vue
-msgid "ABOUT US"
-msgstr ""
-
 #: pages/booking.vue
 msgid "Accept Booking Terms &amp; Conditions"
 msgstr ""
@@ -1862,6 +1858,7 @@ msgstr ""
 msgid "Access the data you need to run your global business."
 msgstr ""
 
+#: pages/public/about.vue
 #: pages/public/index.vue
 msgid "ACCESSIBLE"
 msgstr ""
@@ -2072,6 +2069,7 @@ msgstr ""
 msgid "Adults:"
 msgstr ""
 
+#: pages/public/about.vue
 #: pages/public/index.vue
 msgid "AFFORDABLE"
 msgstr ""
@@ -3697,8 +3695,8 @@ msgstr ""
 #: pages/public/mission.vue
 #: pages/public/partnership.vue
 #: pages/public/signup.vue
-#: connect/index.html
 #: compensation/index.html
+#: connect/index.html
 #: pay_bonus/index.html
 msgid "Close"
 msgstr ""
@@ -4180,7 +4178,6 @@ msgstr ""
 msgid "Credit or debit card"
 msgstr ""
 
-#: pages/public/about.vue
 #: pages/public/mission.vue
 msgid "CRUISE"
 msgstr ""
@@ -5507,7 +5504,6 @@ msgid ""
 "Reward Points."
 msgstr ""
 
-#: pages/public/about.vue
 #: pages/public/mission.vue
 #: pages/public/partnership.vue
 msgid "FOR FREE"
@@ -5517,7 +5513,6 @@ msgstr ""
 msgid "For help logging in please contact"
 msgstr ""
 
-#: pages/public/about.vue
 #: pages/public/mission.vue
 #: pages/public/partnership.vue
 msgid "FOR LESS"
@@ -5542,6 +5537,19 @@ msgstr ""
 msgid ""
 "For these reasons, I became a believer in Mercy Ships' mission, and I hope "
 "you, our inCruises family, will do the same."
+msgstr ""
+
+#: pages/welcome.vue
+msgid ""
+"For your financial protection (INCRUISES INTERNATIONAL LLC) is a member of "
+"Trust My Travel and our membership number is (TMT56252). All client "
+"payments to INCRUISES INTERNATIONAL LLC are protected by Trust My Travel. "
+"This means in the unlikely event of our financial\n"
+"\t\t\t\t\t\tfailure, you will receive a refund for any payments made to "
+"INCRUISES INTERNATIONAL LLC and were not previously utilized, expired, or "
+"applied towards an upcoming cruise booking, for which a confirmation number "
+"has been delivered by a Third Party Service Provider (for\n"
+"\t\t\t\t\t\texample, a cruise line)."
 msgstr ""
 
 #: layouts/default.html
@@ -5789,7 +5797,6 @@ msgstr ""
 msgid "Get Help"
 msgstr ""
 
-#: pages/public/about.vue
 #: pages/public/mission.vue
 #: pages/public/partnership.vue
 msgid "GET PAID"
@@ -9847,6 +9854,7 @@ msgid ""
 "\t\t\t\t\t\t\tfor more information on your financial protection."
 msgstr ""
 
+#: pages/welcome.vue
 #: components/public/FooterLinks.vue
 msgid ""
 "Please click\n"
@@ -10478,6 +10486,7 @@ msgstr ""
 msgid "Profile Picture"
 msgstr ""
 
+#: pages/public/about.vue
 #: pages/public/index.vue
 msgid "PROFITABLE"
 msgstr ""
@@ -12999,7 +13008,6 @@ msgstr ""
 msgid "To continue with iPayout, please create an account."
 msgstr ""
 
-#: pages/public/about.vue
 #: pages/public/mission.vue
 msgid "TO CRUISE"
 msgstr ""
@@ -13351,6 +13359,7 @@ msgstr ""
 msgid "Triple Digit Banner"
 msgstr ""
 
+#: pages/welcome.vue
 #: components/public/FooterLinks.vue
 #: layouts/default.html
 #: layouts/default_no_nav.html
@@ -14050,6 +14059,7 @@ msgid ""
 "Please understand that inCruises cannot give you personal tax advice."
 msgstr ""
 
+#: pages/public/about.vue
 #: pages/public/index.vue
 #: pages/public/partnership.vue
 msgid "WE MAKE YOUR TRAVEL DREAMS"
