Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -560,7 +560,16 @@ msgstr ""
 msgid "%{ roomCount } rooms, %{ guestCount } guests"
 msgstr ""
 
+#: pages/checkout.vue
+msgid "%{adults} Adults"
+msgstr ""
+
+#: pages/checkout.vue
+msgid "%{children} Children"
+msgstr ""
+
 #: pages/book.vue
+#: pages/checkout.vue
 msgid "%{nights} Nights"
 msgstr ""
 
@@ -1639,6 +1648,10 @@ msgstr ""
 msgid "14 December 2022: Breakfast and checkout"
 msgstr ""
 
+#: pages/hotels.vue
+msgid "150,000+ Global Destinations are Waiting for You!"
+msgstr ""
+
 #: pages/public/payment_terms.vue
 msgid "15800 Pines Blvd Suite # 334"
 msgstr ""
@@ -1734,7 +1747,6 @@ msgid ""
 msgstr ""
 
 #: pages/book.vue
-#: pages/hotels.vue
 msgid "5,000+ Global Destinations are Waiting for You!"
 msgstr ""
 
@@ -2183,6 +2195,10 @@ msgstr ""
 msgid "All questions answered correctly"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid "All rate comparisons will be in U.S. dollars."
+msgstr ""
+
 #: pages/admin_blog.vue
 msgid "All Sections"
 msgstr ""
@@ -2407,6 +2423,10 @@ msgstr ""
 #: resources/index.html
 #: webinar_recordings/index.html
 msgid "Apple"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid "Applicability"
 msgstr ""
 
 #: pages/additional_info.vue
@@ -2970,6 +2990,14 @@ msgstr ""
 
 #: components/costa-banner.vue
 msgid "Book Now"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid "BOOK WITH CONFIDENCE"
+msgstr ""
+
+#: controllers/menu_page.js
+msgid "Book with Reward Points, have total confidence!"
 msgstr ""
 
 #: pages/account_setup.vue
@@ -3709,6 +3737,10 @@ msgstr ""
 #: pages/book.vue
 #: pages/hotels.vue
 msgid "Close Filter"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid "Club Members Always Win with inStays"
 msgstr ""
 
 #: pages/public/leadership.vue
@@ -5269,6 +5301,10 @@ msgstr ""
 msgid "Event Title"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid "Example:"
+msgstr ""
+
 #: reports/index.html
 msgid "Exclude Teams"
 msgstr ""
@@ -5338,6 +5374,12 @@ msgstr ""
 msgid ""
 "Explore a world of cruising options; literally thousands of cruises from "
 "the world's leading brands."
+msgstr ""
+
+#: controllers/menu_page.js
+msgid ""
+"Explore a world of vacationing options; literally thousands of properties "
+"from the world’s leading brands."
 msgstr ""
 
 #: Menu
@@ -6075,6 +6117,10 @@ msgstr ""
 msgid "Hotel Phone #"
 msgstr ""
 
+#: controllers/menu_page.js
+msgid "Hotel Search"
+msgstr ""
+
 #: receipts/hotel_booking_receipt.html
 msgid "Hotel Website"
 msgstr ""
@@ -6633,6 +6679,15 @@ msgid ""
 "Client."
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid ""
+"If you book with inStays and\n"
+"\t\t\t\t\t\t\t<span class=\"orange-text\">*find a lower price</span>\n"
+"\t\t\t\t\t\t\tyou get the difference\n"
+"\t\t\t\t\t\t\t<span class=\"orange-text\">in Reward Points</span>\n"
+"\t\t\t\t\t\t\t!"
+msgstr ""
+
 #: upgrade/index.html
 msgid ""
 "If you chose a cash payment option, please proceed to make the payment and "
@@ -7151,6 +7206,10 @@ msgstr ""
 msgid "Instant Partner/Member Bonuses"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid "inStays Price Match Guarantee"
+msgstr ""
+
 #: pages/courses.vue
 #: pages/email_address.vue
 #: pages/leadership_academy.vue
@@ -7638,6 +7697,7 @@ msgid "Leadership Team"
 msgstr ""
 
 #: pages/account_setup.vue
+#: pages/price_match_guarantee.vue
 #: pages/welcome.vue
 #: pages/public/causes.vue
 msgid "Learn More"
@@ -7986,6 +8046,13 @@ msgstr ""
 
 #: components/public/Faq.vue
 msgid "Members must be at least 18 years old."
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid ""
+"Members must submit requests for credits within\n"
+"\t\t\t\t\t\t\t<strong>72 hours</strong>\n"
+"\t\t\t\t\t\t\tof original booking confirmation."
 msgstr ""
 
 #: components/public/Faq.vue
@@ -9076,6 +9143,15 @@ msgstr ""
 
 #: pages/booking.vue
 msgid "One or more members has an active sailing or a pending invoice."
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid ""
+"only applies to publicly available rates and excludes loyalty program rates "
+"not visible to the general public (i.e., through wholesale travel "
+"companies). It’s also only applicable to lower rates found within\n"
+"\t\t\t\t\t\t\t\t<strong>72 hours</strong>\n"
+"\t\t\t\t\t\t\t\tof a booking confirmed through the inStays platform."
 msgstr ""
 
 #: reports/index.html
@@ -10389,6 +10465,11 @@ msgstr ""
 msgid "Price Lower on Top"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+#: controllers/menu_page.js
+msgid "Price Match Guarantee"
+msgstr ""
+
 #: pages/hotels_booking.vue
 msgid "Price per night:"
 msgstr ""
@@ -10530,6 +10611,10 @@ msgstr ""
 
 #: compensation/index.html
 msgid "Projected Earnings"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid "Proof of Lower Rate"
 msgstr ""
 
 #: webinar_recordings/index.html
@@ -12314,6 +12399,10 @@ msgstr ""
 msgid "The Incaricato also warrants and declares to the Company that he/she:"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid "The inStays Price Match Guarantee terms are:"
+msgstr ""
+
 #: apps/index.html
 msgid ""
 "The iPhone app is pending review and will be released on the App Store "
@@ -13055,6 +13144,19 @@ msgid ""
 "href=\"https://incruises.com/support\">https://incruises.com/support</a>"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid ""
+"To ensure Club Members receive the best rates available at the time, the\n"
+"\t\t\t\t\t\t\t<strong>inStays Price Match Guarantee</strong>\n"
+"\t\t\t\t\t\t\tlets you book with even more confidence. Simply make a "
+"confirmed hotel or resort booking through the inStays platform. *If you "
+"then find a lower publicly available published price for your same hotel, "
+"exact dates and room category booked within\n"
+"\t\t\t\t\t\t\t<strong>72 hours</strong>\n"
+"\t\t\t\t\t\t\tof your inStays booking, you can receive a credit for the "
+"difference in Reward Points."
+msgstr ""
+
 #: pages/email_address.vue
 msgid ""
 "To generate a new password by telling us which Email Client you plan to set "
@@ -13089,6 +13191,16 @@ msgstr ""
 
 #: components/payout/birthday-modal.vue
 msgid "To proceed please confirm your birthdate:"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid ""
+"To request a credit, visit your Support page (\n"
+"\t\t\t\t\t\t\t<a href=\"%{ supportLink }\" target=\"_blank\">%{ supportLink "
+"}</a>\n"
+"\t\t\t\t\t\t\t), and send a new ticket to the\n"
+"\t\t\t\t\t\t\t<strong>“Hotel Booking Questions”</strong>\n"
+"\t\t\t\t\t\t\tdepartment."
 msgstr ""
 
 #: pages/public/partnership.vue
@@ -14390,6 +14502,15 @@ msgid ""
 "more!"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid ""
+"With inStays, Club Members can redeem Reward Points for thousands of "
+"world-class hotels and resorts. This lets you book land-based vacations and "
+"pre- and post-cruise hotels at the best publicly available rates. Your "
+"vacation purchasing power is amplified when you use\n"
+"\t\t\t\t\t\t\tReward Points."
+msgstr ""
+
 #: pages/my_cruise_savings.vue
 msgid "With the inCruises Membership, I have sailed on"
 msgstr ""
@@ -14840,6 +14961,18 @@ msgstr ""
 msgid "You haven't setup your eWallet:"
 msgstr ""
 
+#: pages/price_match_guarantee.vue
+msgid ""
+"You make a confirmed hotel booking on the inStays platform with a total "
+"cost of\n"
+"\t\t\t\t\t\t\t\t<strong>$500 USD</strong>\n"
+"\t\t\t\t\t\t\t\t. You find a lower publicly available rate the next day for\n"
+"\t\t\t\t\t\t\t\t<strong>$475 USD</strong>\n"
+"\t\t\t\t\t\t\t\t. If all terms below are met, you will receive\n"
+"\t\t\t\t\t\t\t\t<strong>25 Reward Points</strong>\n"
+"\t\t\t\t\t\t\t\tcredited back to your account."
+msgstr ""
+
 #: pages/upgrade.vue
 msgid ""
 "You may not become an InCruises Member in your country of residence. For "
@@ -15272,6 +15405,13 @@ msgstr ""
 
 #: subscriptions/index.html
 msgid "Your Subscriptions"
+msgstr ""
+
+#: pages/price_match_guarantee.vue
+msgid ""
+"Your ticket must include a print screen(s) from the website showing the "
+"lower rate, hotel name, room type, number of occupants, date/time stamp, "
+"and the total cost, including all taxes and fees."
 msgstr ""
 
 #: pages/welcome.vue
