Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -8407,10 +8407,10 @@ msgid "Logged in as user!"
 msgstr ""
 
 #: components/blog/navbar.vue
+#: components/public/Header.vue
 #: components/payout/hyperwallet-withdraw.vue
 #: components/payout/ipayout-withdraw.vue
 #: components/payout/payoneer-withdraw.vue
-#: components/public/Header.vue
 #: pages/login/login.vue
 #: pages/public/signup.vue
 #: communications/index.html
@@ -15939,7 +15939,7 @@ msgstr ""
 
 #: pages/upgrade.vue
 msgid ""
-"You may not become an InCruises Member in your country of residence. For "
+"You may not become an InCruises Partner in your country of residence. For "
 "more information please contact support."
 msgstr ""
 
