Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -14122,8 +14122,8 @@ msgstr ""
 #: pages/hotels_booking.vue
 #: receipts/italian_commission.html
 #: receipts/italian_receipt.html
-#: upgrade/index.html
 #: track_growth/index.html
+#: upgrade/index.html
 msgid "Total"
 msgstr ""
 
@@ -15951,6 +15951,24 @@ msgstr ""
 
 #: controllers/reports.js
 msgid "You must select at least one user type."
+msgstr ""
+
+#: components/compensation/leadership_bonus.vue
+msgid ""
+"You must sign the Leadership Certification before requesting your "
+"leadership bonus."
+msgstr ""
+
+#: components/compensation/leadership_bonus.vue
+msgid ""
+"You must sign the National Director Addendum before requesting your "
+"leadership bonus."
+msgstr ""
+
+#: components/compensation/leadership_bonus.vue
+msgid ""
+"You must sign the Ukrainian Agreement before requesting your leadership "
+"bonus."
 msgstr ""
 
 #: pages/hotels.vue
