Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -1590,6 +1590,38 @@ msgid ""
 "bonus is earned."
 msgstr ""
 
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"<span class=\"tooltip-bottom\" :tooltip=\"$gettext('Allow payout provider "
+"to be available for users')\"><i class=\"fas "
+"fa-question-circle\"></i></span>\n"
+"\t\t\t\t\t\t\t\tEnable"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"<span class=\"tooltip-bottom\" :tooltip=\"$gettext('Timeframe for enforcing "
+"\\'Period Transfer Limit\\' - (Hourly)')\"><i class=\"fas "
+"fa-question-circle\"></i></span>\n"
+"\t\t\t\t\t\t\t\tTransfer Period"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"<span class=\"tooltip-bottom\" :tooltip=\"$gettext('Total amount limit each "
+"user will be allowed to withdraw within a weekend (Friday-Sunday) - "
+"(Nearest whole value)')\"><i class=\"fas fa-question-circle\"></i></span>\n"
+"\t\t\t\t\t\t\t\tWeekend Transfer Limit"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"<span class=\"tooltip-bottom\" :tooltip=\"$gettext('Total amount limit each "
+"user will be allowed to withdraw within the given \\'Transfer Period\\' - "
+"(Nearest whole value)')\"><i class=\"fas fa-question-circle\"></i></span>\n"
+"\t\t\t\t\t\t\t\tPeriod Transfer Limit"
+msgstr ""
+
 #: pages/email_notifications.vue
 #: email_notifications/index.html
 msgid "<span style=\"position:relative; left:-5px;\">Search</span>"
@@ -2456,6 +2488,12 @@ msgstr ""
 #: receipts/italian_commission.html
 #: receipts/italian_receipt.html
 msgid "Address:"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"Adjust withdrawal limts for any available wallet payout provider. To allow "
+"for 'Unlimited' please set the value to 0."
 msgstr ""
 
 #: pages/admin_communications.vue
@@ -11479,6 +11517,10 @@ msgstr ""
 msgid "Prospecting Ideas"
 msgstr ""
 
+#: pages/admin_wallet_withdrawal.vue
+msgid "Provider"
+msgstr ""
+
 #: pages/checkout.vue
 #: upgrade/index.html
 msgid "Proxy Detected"
@@ -15078,6 +15120,19 @@ msgstr ""
 #: components/payout/wallet-transfers.vue
 #: old_refund_protocol/remove_weeklybonus_modal.html
 msgid "Wallet Transfer Logs"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid "Wallet Withdrawal"
+msgstr ""
+
+#: pages/admin_wallet_withdrawal.vue
+msgid ""
+"Wallet Withdrawal Limits\n"
+"\t\t\t\t\t\t<label class=\"small\" style=\"width:100%\" v-translate=\"\">\n"
+"\t\t\t\t\t\t\tAdjust withdrawal limts for any available wallet payout "
+"provider. To allow for 'Unlimited' please set the value to 0.\n"
+"\t\t\t\t\t\t</label>"
 msgstr ""
 
 #: components/public/Testimonials.vue
