Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -678,6 +678,8 @@ msgid "%{ night } Nights"
 msgstr ""
 
 #: components/reservation.vue
+#: pages/booking.vue
+#: pages/cruise.vue
 msgid "%{ nights } Nights"
 msgstr ""
 
@@ -1617,12 +1619,12 @@ msgstr ""
 #: pages/cruise.vue
 msgid ""
 "<strong>\n"
-"\t\t\t\t\t\t\t\t\tThe prices shown are in US dollars, based on\n"
-"\t\t\t\t\t\t\t\t\t<u>double occupancy</u>\n"
-"\t\t\t\t\t\t\t\t\t, and subject to availability.\n"
-"\t\t\t\t\t\t\t\t</strong>\n"
-"\t\t\t\t\t\t\t\t%{ taxes }. They do not include airfare or transfer to and "
-"from the arriving and departing ports."
+"\t\t\t\t\t\t\t\t\t\tThe prices shown are in US dollars, based on\n"
+"\t\t\t\t\t\t\t\t\t\t<u>double occupancy</u>\n"
+"\t\t\t\t\t\t\t\t\t\t, and subject to availability.\n"
+"\t\t\t\t\t\t\t\t\t</strong>\n"
+"\t\t\t\t\t\t\t\t\t%{ taxes }. They do not include airfare or transfer to "
+"and from the arriving and departing ports."
 msgstr ""
 
 #: pages/global_summit_2023.vue
@@ -3973,8 +3975,8 @@ msgstr ""
 #: pages/email.vue
 #: pages/invoices.vue
 #: components/booking/add-cd-user.vue
-#: components/recurring/add-recurring.vue
 #: components/payout/euro-conversion.vue
+#: components/recurring/add-recurring.vue
 #: components/payout/brightwell/brightwell-recipient-account.vue
 #: agreements/italian_addendum_agreement.html
 #: agreements/leadership_agreement.html
@@ -4419,13 +4421,13 @@ msgstr ""
 #: pages/resources.vue
 #: pages/reward_points.vue
 #: pages/welcome.vue
-#: components/global_convention/event_info.vue
 #: components/compensation/leadership_bonus.vue
 #: components/compensation/residual_bonus.vue
-#: components/recurring/add-recurring.vue
+#: components/global_convention/event_info.vue
 #: components/public/FooterLinks.vue
 #: components/public/JoinModal.vue
 #: components/public/Testimonials.vue
+#: components/recurring/add-recurring.vue
 #: pages/public/about.vue
 #: pages/public/index.vue
 #: pages/public/leadership.vue
@@ -5422,11 +5424,6 @@ msgstr ""
 
 #: receipts/booking_receipt.html
 msgid "Departs From"
-msgstr ""
-
-#: pages/booking.vue
-#: pages/cruise.vue
-msgid "Departs: %{ start }"
 msgstr ""
 
 #: pages/my_cruise_savings.vue
@@ -8715,11 +8712,6 @@ msgstr ""
 msgid "Length:"
 msgstr ""
 
-#: pages/booking.vue
-#: pages/cruise.vue
-msgid "Length: %{ nights } Nights"
-msgstr ""
-
 #: components/mercy-ship-modals.vue
 msgid "LET'S DO IT AGAIN!"
 msgstr ""
@@ -8836,8 +8828,8 @@ msgstr ""
 #: components/payout/ipayout-withdraw.vue
 #: components/payout/payoneer-withdraw.vue
 #: components/public/Header.vue
-#: pages/public/signup.vue
 #: pages/login/login.vue
+#: pages/public/signup.vue
 #: communications/index.html
 #: communications/view.html
 #: income_disclosure/index.html
@@ -10281,9 +10273,9 @@ msgid ""
 "Once on board, you will need to pay out of pocket for things such as: "
 "cruise tours, beverage packages and personal expenditures. Those are your "
 "expenses, subject to our\n"
-"\t\t\t\t\t\t\t\t<a class=\"text-black\" target=\"_blank\" "
+"\t\t\t\t\t\t\t\t\t<a class=\"text-black\" target=\"_blank\" "
 "href=\"%{agreement}\">Cruise Membership Agreement</a>\n"
-"\t\t\t\t\t\t\t\t. Flights to and from the cruise, if necessary, are not "
+"\t\t\t\t\t\t\t\t\t. Flights to and from the cruise, if necessary, are not "
 "included in our prices nor membership."
 msgstr ""
 
@@ -14847,8 +14839,8 @@ msgstr ""
 #: pages/hotels_booking.vue
 #: receipts/italian_commission.html
 #: receipts/italian_receipt.html
-#: upgrade/index.html
 #: track_growth/index.html
+#: upgrade/index.html
 msgid "Total"
 msgstr ""
 
@@ -15254,11 +15246,6 @@ msgstr ""
 
 #: unsubscribe/index.html
 msgid "Unsubscribe from our mailing list:"
-msgstr ""
-
-#: pages/booking.vue
-#: pages/cruise.vue
-msgid "Until: %{ return }"
 msgstr ""
 
 #: components/recurring/confirm-recurring.vue
