Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -15453,7 +15453,7 @@ msgid "To open a support ticket you must be a registered user of our site."
 msgstr ""
 
 #: components/checkout/Processor2For1.vue
-msgid "To pay $%{totalAmount} out of pocket"
+msgid "To pay $%{totalAmountString} out of pocket"
 msgstr ""
 
 #: pages/facebook_marketing.vue
@@ -16097,7 +16097,7 @@ msgstr ""
 
 #: components/checkout/Processor2For1.vue
 msgid ""
-"Using %{totalAmountTwice}\n"
+"Using %{totalAmountTwiceString}\n"
 "\t\t\t\t\t<sub>2 For 1</sub>"
 msgstr ""
 
