Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -3643,6 +3643,10 @@ msgstr ""
 msgid "Bonus"
 msgstr ""
 
+#: components/compensation/leadership_bonus.vue
+msgid "Bonus achieved!"
+msgstr ""
+
 #: components/compensation/builders_bonus.vue
 #: receipts/builders_bonus.html
 #: receipts/daily_member_activation.html
@@ -3652,7 +3656,6 @@ msgstr ""
 msgid "Bonus Amount"
 msgstr ""
 
-#: components/compensation/leadership_bonus.vue
 #: old_compensation/index.html
 msgid "Bonus earned!"
 msgstr ""
@@ -3674,8 +3677,11 @@ msgstr ""
 msgid "Bonus Locked (Need {{5 - weeklyBonus.data.weekly_points}} more points)"
 msgstr ""
 
-#: pages/growth_calculator.vue
 #: components/compensation/leadership_bonus.vue
+msgid "Bonus not achieved yet."
+msgstr ""
+
+#: pages/growth_calculator.vue
 #: old_compensation/index.html
 #: old_refund_protocol/leadership_bonus_modal.html
 msgid "Bonus not earned yet."
@@ -7126,7 +7132,7 @@ msgid ""
 msgstr ""
 
 #: components/compensation/leadership_bonus.vue
-msgid "Greater bonus earned."
+msgid "Greater bonus achieved."
 msgstr ""
 
 #: components/compensation/qbi.vue
@@ -7166,7 +7172,7 @@ msgid "Habitual"
 msgstr ""
 
 #: components/compensation/leadership_bonus.vue
-msgid "Half bonus earned!"
+msgid "Half bonus achieved!"
 msgstr ""
 
 #: pages/email.vue
@@ -7267,6 +7273,7 @@ msgstr ""
 
 #: components/compensation/compensation_details.vue
 #: components/compensation/qbi.vue
+#: components/compensation/team.vue
 msgid "Historical QBI"
 msgstr ""
 
@@ -15294,7 +15301,7 @@ msgid "Title"
 msgstr ""
 
 #: components/compensation/leadership_bonus.vue
-msgid "Title earned!"
+msgid "Title achieved!"
 msgstr ""
 
 #: pages/booking.vue
