Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -5853,6 +5853,10 @@ msgstr ""
 msgid "Directs (Month to Date)"
 msgstr ""
 
+#: components/compensation/builders_bonus.vue
+msgid "Directs with Pending Builders for"
+msgstr ""
+
 #: pages/support.vue
 msgid "Disclaimer"
 msgstr ""
@@ -17662,6 +17666,12 @@ msgstr ""
 
 #: components/compensation/account_status.vue
 msgid "You have no direct partners currently eligibile for Fast Start."
+msgstr ""
+
+#: components/compensation/builders_bonus.vue
+msgid ""
+"You have no direct partners with a pending Builders Base Bonus for the "
+"selected month."
 msgstr ""
 
 #: components/compensation/member_activations.vue
