--- a/client.pot
+++ b/client.pot
@@ -244,6 +244,10 @@ msgstr ""
 msgid "(2 For 1)"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "(2 for 1) Reward Points"
+msgstr ""
+
 #: agreements/national_director_agreement.html
 msgid "(2) in the infringement of any or all such rights."
 msgstr ""
@@ -965,22 +969,11 @@ msgid "<b>Booking Terms &amp; Conditions</b>"
 msgstr ""
 
 #: components/price_match_guarantee/cruises.vue
-msgid ""
-"<b>inGroup</b>\n"
-"\t\t\t\t\t\t\t\t\tguarantees that when you use your\n"
-"\t\t\t\t\t\t\t\t\t<b>Reward Points</b>\n"
-"\t\t\t\t\t\t\t\t\tand book a cruise with us, you will pay less for that "
-"booking than booking it directly with the cruise lines or any other "
-"reseller.\n"
-"\t\t\t\t\t\t\t\t\t<b>100% of our Members</b>\n"
-"\t\t\t\t\t\t\t\t\thave saved money\n"
-"\t\t\t\t\t\t\t\t\t<b>100% of the time</b>\n"
-"\t\t\t\t\t\t\t\t\teach time they have booked a cruise with us compared to "
-"anywhere else when considering the savings afforded via our\n"
-"\t\t\t\t\t\t\t\t\t<b>Membership</b>\n"
-"\t\t\t\t\t\t\t\t\twhen applying their\n"
-"\t\t\t\t\t\t\t\t\t<b>Reward Points</b>\n"
-"\t\t\t\t\t\t\t\t\tand out-of-pocket funds."
+msgid "<b>For example:</b>"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "<b>How to present proof of a lower rate to inCruises:</b>"
 msgstr ""
 
 #: pages/global_summit_2023.vue
@@ -990,10 +983,28 @@ msgid ""
 "period to be eligible to win."
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"<b>That's how confident we are that the value you get with your Membership "
+"is unmatched and unavailable anywhere else!</b>"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"<b>That's right! If you find a lower price, we give you FIVE TIMES the "
+"difference in (1 for 1) Reward Points. That's your</b>"
+msgstr ""
+
 #: pages/global_summit_2023.vue
 msgid ""
 "<b>Tiebreaker:</b>\n"
 "\t\t\t\t\t\t\t\t\tPersonal income during the competition period."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"<b>You can book with confidence knowing you will save money 100% of the "
+"time with inCruises!</b>"
 msgstr ""
 
 #: pages/email.vue
@@ -1860,6 +1871,10 @@ msgid ""
 "$100,000 in total team production in any given month.<br><br> International "
 "Directors automatically earn our FREEDOM BONUS of $10,000 each and every "
 "month they remain qualified."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "$2,000 Cruise Booking"
 msgstr ""
 
 #: pages/connect.vue
@@ -2875,6 +2890,10 @@ msgid ""
 "your Member rewards."
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "Always Save"
+msgstr ""
+
 #: pages/builders_base.vue
 #: components/compensation/leadership_bonus.vue
 #: pages/public/leadership.vue
@@ -3751,10 +3770,6 @@ msgstr ""
 msgid "BOOK AND CRUISE AT YOUR OWN RISK"
 msgstr ""
 
-#: components/price_match_guarantee/cruises.vue
-msgid "Book confidently, knowing you are saving money every time."
-msgstr ""
-
 #: pages/cruise.vue
 msgid "Book Cruise"
 msgstr ""
@@ -3767,7 +3782,6 @@ msgstr ""
 msgid "Book Now"
 msgstr ""
 
-#: components/price_match_guarantee/cruises.vue
 #: components/price_match_guarantee/hotels.vue
 #: components/savings_guarantee/hotels.vue
 msgid "BOOK WITH CONFIDENCE"
@@ -3789,6 +3803,10 @@ msgstr ""
 #: components/admin_booking/cruise_bookings.vue
 #: receipts/index.html
 msgid "Booking"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "Booking Cost"
 msgstr ""
 
 #: receipts/booking_receipt.html
@@ -4299,6 +4317,10 @@ msgstr ""
 msgid "Celebrating 5 Years!"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "centive will have no out-of-pocket cost attributed to them in a comparison."
+msgstr ""
+
 #: components/booking/agreements.vue
 msgid ""
 "Certain destinations require travel documents, for example, a Passport/ ID "
@@ -4630,6 +4652,7 @@ msgstr ""
 #: components/compensation/leadership_bonus.vue
 #: components/compensation/residual_bonus.vue
 #: components/global_convention/event_info.vue
+#: components/price_match_guarantee/cruises.vue
 #: components/public/FooterLinks.vue
 #: components/public/JoinModal.vue
 #: components/public/Testimonials.vue
@@ -4648,6 +4671,10 @@ msgstr ""
 
 #: pages/hotels.vue
 msgid "Close Filter"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "Club Members"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
@@ -5267,6 +5294,10 @@ msgstr ""
 
 #: Menu
 msgid "Cruise Savings"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "Cruise Savings Guarantee"
 msgstr ""
 
 #: pages/my_cruise_savings.vue
@@ -6389,6 +6420,10 @@ msgstr ""
 msgid "English"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "ensures you will always get the absolute best cruise value for your money!"
+msgstr ""
+
 #: pages/reward_points.vue
 msgid "Enter the 6-digit code you received via phone to verify your transfer"
 msgstr ""
@@ -6741,6 +6776,10 @@ msgstr ""
 
 #: pages/admin_support_analytics.vue
 msgid "First Response Avg"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "FIVE TIMES"
 msgstr ""
 
 #: pages/login/login.vue
@@ -7226,6 +7265,10 @@ msgstr ""
 msgid "Growth Calculator:"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "Guaranteed"
+msgstr ""
+
 #: pages/public/payment_terms.vue
 msgid "Guaynabo, Puerto Rico 00968-1705"
 msgstr ""
@@ -7529,6 +7572,12 @@ msgstr ""
 #: pages/global_summit_2023.vue
 #: pages/global_summit_dr.vue
 msgid "How To Win!"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"How? Simply book cruises using your Reward Points and you are guaranteed to "
+"save vs booking directly with cruise lines and cruise resellers."
 msgstr ""
 
 #: pages/italian_onboarding.vue
@@ -7948,6 +7997,13 @@ msgid ""
 "Points for a reservation?"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"If all terms are met, inCruises will notify you that FIVE TIMES the "
+"verified price difference in (1 for 1) Reward Points has been added to your "
+"( 1 for 1) Account."
+msgstr ""
+
 #: pages/italian_onboarding.vue
 msgid ""
 "If all this information is correct, press submit below to send in for "
@@ -7985,6 +8041,14 @@ msgid ""
 "each month of new production and pay your Builders Base bonus when it hits "
 "72% or higher, or the actual QBI by the end of the fourth month following "
 "that month's production."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"If within 72 hours of booking you find the exact same cruise offered "
+"somewhere else for $1,450 so 50 dollars less than your total out-of-pocket "
+"cost, you would then provide proof of this lower rate to inCruises support "
+"and we will give you"
 msgstr ""
 
 #: pages/global_summit_dr.vue
@@ -8220,6 +8284,7 @@ msgid "in"
 msgstr ""
 
 #: pages/allin23.vue
+#: components/price_match_guarantee/cruises.vue
 msgid "IN"
 msgstr ""
 
@@ -8314,21 +8379,9 @@ msgstr ""
 
 #: components/price_match_guarantee/cruises.vue
 msgid ""
-"In the unlikely event that you find the same cruise for less than what you "
-"paid out of pocket and for the costs of the Reward Points used to make your "
-"cruise booking with us,\n"
-"\t\t\t\t\t\t\t\t\t<b>we will refund you FIVE times</b>\n"
-"\t\t\t\t\t\t\t\t\tthe difference in an additional\n"
-"\t\t\t\t\t\t\t\t\t<b>1 for 1 Reward Points</b>\n"
-"\t\t\t\t\t\t\t\t\t. Yes,\n"
-"\t\t\t\t\t\t\t\t\t<b>five times</b>\n"
-"\t\t\t\t\t\t\t\t\tthe amount of the difference in what you paid total out "
-"of pocket between\n"
-"\t\t\t\t\t\t\t\t\t<b>Membership</b>\n"
-"\t\t\t\t\t\t\t\t\tpayments and the final payment upon booking and the lower "
-"price you found elsewhere!\n"
-"\t\t\t\t\t\t\t\t\t<b>That’s your inGroup guarantee</b>\n"
-"\t\t\t\t\t\t\t\t\t."
+"In the unlikely event, you book a cruise with inCruises and then within 72 "
+"hours find it somewhere else for less than what your total out-of-pocket "
+"cost was with inCruises, you can receive"
 msgstr ""
 
 #: components/payout/euro-conversion.vue
@@ -8356,6 +8409,10 @@ msgstr ""
 #: pages/reports.vue
 #: reports/index.html
 msgid "Include"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "Include all taxes and fees."
 msgstr ""
 
 #: pages/hotels_details.vue
@@ -8394,6 +8451,10 @@ msgstr ""
 
 #: pages/apps.vue
 msgid "inCruises App &amp; Features Demo"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "inCruises Club Members, book cruises with confidence, knowing your"
 msgstr ""
 
 #: components/public/FooterLinks.vue
@@ -8478,6 +8539,10 @@ msgstr ""
 
 #: pages/public/reviews.vue
 msgid "inCruises Reviews"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "inCruises Savings Guarantee!"
 msgstr ""
 
 #: pages/support.vue
@@ -10657,12 +10722,6 @@ msgid ""
 "cancellation and not eligible for a refund."
 msgstr ""
 
-#: pages/booking.vue
-msgid ""
-"Norwegian Cruise Line can temporarily only be booked 125 days into the "
-"future. Sorry for any inconvenience this might cause."
-msgstr ""
-
 #: pages/info_center.vue
 #: pages/reach.vue
 #: pages/reward_points.vue
@@ -10842,6 +10901,10 @@ msgstr ""
 msgid "On"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "On Cruises..."
+msgstr ""
+
 #: pages/global_summit_2023.vue
 #: pages/global_summit_dr.vue
 msgid "on the leaderboard."
@@ -10873,6 +10936,13 @@ msgid ""
 "Once on board, you will need to pay out of pocket for things such as: "
 "cruise tours, beverage packages and personal expenditures. Those are your "
 "expenses, subject to our"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"Once you have a confirmed cruise booking through the inCruises platform, "
+"and within 72 hours you find a lower, publicly available, published price, "
+"use these criteria in the comparison:"
 msgstr ""
 
 #: pages/banner_tracking.vue
@@ -11032,6 +11102,10 @@ msgstr ""
 msgid "Out of Pocket"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "Out-of-Pocket Cost"
+msgstr ""
+
 #: pages/my_cruise_savings.vue
 msgid "Out-of-Pocket Paid"
 msgstr ""
@@ -11052,8 +11126,16 @@ msgstr ""
 msgid "Overview"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "page and send a new ticket to the ”Cruise Booking Questions” department."
+msgstr ""
+
 #: pages/referral_links.vue
 msgid "Page Data"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "Paid at Time of Booking"
 msgstr ""
 
 #: pages/invoices.vue
@@ -14301,6 +14383,7 @@ msgstr ""
 
 #: pages/settings.vue
 #: pages/support.vue
+#: components/price_match_guarantee/cruises.vue
 #: layouts/italian_onboarding.html
 msgid "Support"
 msgstr ""
@@ -14501,6 +14584,10 @@ msgstr ""
 msgid "Telephone: 1-888-396-7285"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "Terms"
+msgstr ""
+
 #: pages/booking.vue
 msgid "Terms And Conditions Page"
 msgstr ""
@@ -14573,6 +14660,10 @@ msgstr ""
 msgid "The 2023 Global Leadership Summit Contest is here!"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "the 50-dollar difference. That's 250 (1 for 1) Reward Points!"
+msgstr ""
+
 #: pages/courses.vue
 msgid "The Basic Training Courses will show you the"
 msgstr ""
@@ -14608,6 +14699,18 @@ msgid ""
 "again."
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"The comparison can be presented in whatever currency is used in your "
+"browser."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"The comparison must be for the exact same cruise: same dates, number and "
+"ages of guests, promotional package, cabin category, deck, and location."
+msgstr ""
+
 #: pages/leadership_academy.vue
 msgid "The course has been restored you can do it again"
 msgstr ""
@@ -14630,6 +14733,12 @@ msgstr ""
 #: pages/reports.vue
 #: reports/index.html
 msgid "The date the user paid to activate and become a Partner."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"the difference in (1 for 1) Reward Points to use on your next cruise or "
+"hotel booking."
 msgstr ""
 
 #: pages/partner_success.vue
@@ -15665,6 +15774,10 @@ msgstr ""
 msgid "To request a credit, visit your Support page ("
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "To request FIVE TIMES the difference in (1 for 1) Reward Points, visit your"
+msgstr ""
+
 #: components/payout/brightwell/brightwell-transfer-details.vue
 msgid ""
 "To see a full list of supported cash pickup partner locations please refer "
@@ -15742,6 +15855,7 @@ msgstr ""
 
 #: pages/hotels_booking.vue
 #: pages/track_growth.vue
+#: components/price_match_guarantee/cruises.vue
 #: receipts/italian_commission.html
 #: receipts/italian_receipt.html
 #: track_growth/index.html
@@ -17001,6 +17115,15 @@ msgstr ""
 msgid "What will you win?"
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"When comparing prices please remember to factor in only what you paid "
+"out-of-pocket at checkout and what you actually paid out-of-pocket for the "
+"Reward Points you used to make the cruise booking. Also keep in mind that "
+"(2 for 1) Reward Points received for free\n"
+"\t\t\t\t\t\t\t\t\t\tthrough the Membership Free"
+msgstr ""
+
 #: pages/global_summit_dr.vue
 msgid "When is the trip?"
 msgstr ""
@@ -17387,6 +17510,13 @@ msgstr ""
 
 #: error/412.html
 msgid "You are using {{currentBrowser.brand}} {{currentBrowser.version}} on {{os}}"
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"You book a $2,000 cruise on the inCruises website and apply 1,000 (2 for 1) "
+"Reward Points (which cost you $500.00 in Membership Payments) and you pay "
+"$1,000 at the time of booking. Your total out-of-pocket cost is $1,500."
 msgstr ""
 
 #: components/public/Faq.vue
@@ -18028,6 +18158,10 @@ msgid ""
 "you will be automatically booked and your Reward Points will be deducted."
 msgstr ""
 
+#: components/price_match_guarantee/cruises.vue
+msgid "YOUR CRUISE SAVINGS GUARANTEE"
+msgstr ""
+
 #: receipts/invoice.html
 #: receipts/kickstart_bonus_statement.html
 msgid "Your Direct"
@@ -18278,6 +18412,13 @@ msgstr ""
 msgid ""
 "Your ticket must include a print screen(s) from the website showing the "
 "lower rate, hotel name, room type, number of occupants, date/time stamp, "
+"and the total cost, including all taxes and fees."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"Your ticket must include your inCruises booking number and a screenshot(s) "
+"from the website showing the lower rate, cruise details, date/time stamp, "
 "and the total cost, including all taxes and fees."
 msgstr ""
 
