--- a/client.pot
+++ b/client.pot
@@ -160,7 +160,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ". If all terms below are met, you will receive"
 msgstr ""
 
@@ -195,7 +194,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ". You find a lower publicly available rate the next day for"
 msgstr ""
 
@@ -206,7 +204,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "“Hotel Booking Questions”"
 msgstr ""
 
@@ -304,7 +301,6 @@ msgid "(Partner full legal name), an individual residing at"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "), and send a new ticket to the"
 msgstr ""
 
@@ -588,7 +584,6 @@ msgid "*Direct means personally sponsored."
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "*find a lower price"
 msgstr ""
 
@@ -1904,7 +1899,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "$475 USD"
 msgstr ""
 
@@ -1916,7 +1910,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "$500 USD"
 msgstr ""
 
@@ -2088,7 +2081,6 @@ msgid "21,000+ Unique Cruise Options Globally are Waiting for You!"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "25 Reward Points"
 msgstr ""
 
@@ -2202,7 +2194,6 @@ msgid "7. Conflicting Provisions."
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "72 hours"
 msgstr ""
 
@@ -2811,11 +2802,6 @@ msgstr ""
 msgid "All questions answered correctly"
 msgstr ""
 
-#: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
-msgid "All rate comparisons will be in U.S. dollars."
-msgstr ""
-
 #: pages/admin_blog.vue
 msgid "All Sections"
 msgstr ""
@@ -3098,7 +3084,6 @@ msgid "Apple"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "Applicability"
 msgstr ""
 
@@ -3791,7 +3776,6 @@ msgid "Book Now"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "BOOK WITH CONFIDENCE"
 msgstr ""
 
@@ -4686,7 +4670,6 @@ msgid "Club Members"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "Club Members Always Win with inStays"
 msgstr ""
 
@@ -5241,7 +5224,6 @@ msgid "Credit or debit card"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "credited back to your account."
 msgstr ""
 
@@ -5711,7 +5693,6 @@ msgid "Department Name"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "department."
 msgstr ""
 
@@ -6503,7 +6484,6 @@ msgid "Every dollar earned in Builder Base Bonuses also generates 1 GLS point"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "Example:"
 msgstr ""
 
@@ -8078,7 +8058,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "If you book with inStays and"
 msgstr ""
 
@@ -8351,7 +8330,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "in Reward Points"
 msgstr ""
 
@@ -8695,7 +8673,6 @@ msgid "Instant Bonuses"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "inStays Price Match Guarantee"
 msgstr ""
 
@@ -9251,8 +9228,6 @@ msgstr ""
 
 #: pages/account_setup.vue
 #: pages/welcome.vue
-#: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 #: pages/public/causes.vue
 msgid "Learn More"
 msgstr ""
@@ -9309,7 +9284,6 @@ msgid "Let's maximize your inCome,"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "lets you book with even more confidence. Simply make a confirmed hotel or "
 "resort booking through the inStays platform. *If you then find a lower "
@@ -9682,7 +9656,6 @@ msgid "Members must be at least 18 years old."
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "Members must submit requests for credits within"
 msgstr ""
 
@@ -10867,7 +10840,6 @@ msgid "October"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "of a booking confirmed through the inStays platform."
 msgstr ""
 
@@ -10877,12 +10849,10 @@ msgid "Of Achievement"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "of original booking confirmation."
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "of your inStays booking, you can receive a credit for the difference in "
 "Reward Points."
@@ -10970,7 +10940,6 @@ msgid "ONLINE TRAVEL SERVICES &amp; TRAVEL ADVISOR AGENCY CATEGORIES"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "only applies to publicly available rates and excludes loyalty program rates "
 "not visible to the general public (i.e., through wholesale travel "
@@ -12609,7 +12578,6 @@ msgid "Progress"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "Proof of Lower Rate"
 msgstr ""
 
@@ -14593,6 +14561,7 @@ msgid "Telephone: 1-888-396-7285"
 msgstr ""
 
 #: components/price_match_guarantee/cruises.vue
+#: components/price_match_guarantee/hotels.vue
 msgid "Terms"
 msgstr ""
 
@@ -14794,7 +14763,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "The inStays Price Match Guarantee terms are:"
 msgstr ""
 
@@ -14859,6 +14827,12 @@ msgstr ""
 
 #: pages/cruise.vue
 msgid "The prices shown are in US dollars, based on"
+msgstr ""
+
+#: components/price_match_guarantee/hotels.vue
+msgid ""
+"The rate comparison can be presented in whatever currency is used in your "
+"browser."
 msgstr ""
 
 #: components/booking/add-cd-user.vue
@@ -15729,7 +15703,6 @@ msgid ""
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "To ensure Club Members receive the best rates available at the time, the"
 msgstr ""
 
@@ -15778,7 +15751,6 @@ msgid "To proceed please confirm your birthdate:"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "To request a credit, visit your Support page ("
 msgstr ""
 
@@ -17285,7 +17257,6 @@ msgid "with inCruises!"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "With inStays, Club Members can redeem Reward Points for thousands of "
 "world-class hotels and resorts. This lets you book land-based vacations and "
@@ -17734,7 +17705,6 @@ msgid "You electronically agreed to be bound by this agreement on"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid "you get the difference"
 msgstr ""
 
@@ -17863,7 +17833,6 @@ msgid "You haven't setup your eWallet:"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "You make a confirmed hotel booking on the inStays platform with a total "
 "cost of"
@@ -18416,7 +18385,6 @@ msgid "Your Team"
 msgstr ""
 
 #: components/price_match_guarantee/hotels.vue
-#: components/savings_guarantee/hotels.vue
 msgid ""
 "Your ticket must include a print screen(s) from the website showing the "
 "lower rate, hotel name, room type, number of occupants, date/time stamp, "
