Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -977,10 +977,6 @@ msgid "<b>Booking Terms &amp; Conditions</b>"
 msgstr ""
 
 #: components/price_match_guarantee/cruises.vue
-msgid "<b>For example:</b>"
-msgstr ""
-
-#: components/price_match_guarantee/cruises.vue
 msgid "<b>How to present proof of a lower rate to inCruises:</b>"
 msgstr ""
 
@@ -995,12 +991,6 @@ msgstr ""
 msgid ""
 "<b>That's how confident we are that the value you get with your Membership "
 "is unmatched and unavailable anywhere else!</b>"
-msgstr ""
-
-#: components/price_match_guarantee/cruises.vue
-msgid ""
-"<b>That's right! If you find a lower price, we give you FIVE TIMES the "
-"difference in (1 for 1) Reward Points. That's your</b>"
 msgstr ""
 
 #: pages/global_summit_2023.vue
@@ -6921,6 +6911,10 @@ msgstr ""
 msgid ""
 "For each $100 USD monthly Membership fee payment, our Members receive 200 "
 "Reward Points."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid "For example:"
 msgstr ""
 
 #: components/compensation/qbi.vue
@@ -15037,6 +15031,12 @@ msgstr ""
 
 #: pages/reward_points.vue
 msgid "That email is not in our system."
+msgstr ""
+
+#: components/price_match_guarantee/cruises.vue
+msgid ""
+"That's right! If you find a lower price, we give you FIVE TIMES the "
+"difference in (1 for 1) Reward Points. That's your"
 msgstr ""
 
 #: components/agreements/national_director_agreement.vue
