--- a/server.pot
+++ b/server.pot
@@ -277,12 +277,6 @@ msgstr ""
 msgid "<strong>Info inCruises</strong>"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"<strong>PLUS</strong> you can earn 2 NO-COST luxury accommodations per year "
-"paid for by inCruises."
-msgstr ""
-
 #: /app/apps/main/views/emails/payments_review/referer.html
 msgid "<strong>Support inCruises</strong>"
 msgstr ""
@@ -425,10 +419,6 @@ msgstr ""
 
 #: /app/apps/main/components/push_notifications.js
 msgid "A new version of the app is available"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "A personalized Referral Link; essentially your own replicated websites"
 msgstr ""
 
 #: /app/apps/main/views/emails/payments_review/pm_referer_md.html
@@ -578,10 +568,6 @@ msgstr ""
 msgid "An admin has responded to your ticket!"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "An amazing library of training videos"
-msgstr ""
-
 #: /app/apps/main/controllers/contacts.js
 msgid "An error has occured"
 msgstr ""
@@ -602,38 +588,16 @@ msgstr ""
 msgid "An online banking verification failure"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "An UNLIMITED email marketing system"
-msgstr ""
-
 #: /app/apps/main/views/emails/invoices/membership_free.html
 msgid ""
 "And as long as those Members remain active you will not have to pay your "
 "monthly Membership again."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"And don't forget - all it takes is referring just 5 other Members to waive "
-"your $100 monthly membership fee and you will still have 200 (2 for 1) "
-"Reward Points added to your Membership account each month at no cost to you."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"And everything is available in English, Spanish, Italian, Russian, "
-"Japanese, Korean, and many more languages, so you can share this "
-"opportunity with billions of people worldwide."
-msgstr ""
-
 #: /app/apps/main/views/emails/upgrade/cruising_partner.html
 msgid ""
 "And if that wasn't enough, you will also get access to Reports, a one of a "
 "kind tool used to design reports of your team."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "And LIVE training webinars and broadcasts + local events!"
 msgstr ""
 
 #: /app/apps/main/views/emails/recurring/recurring_setup.html
@@ -747,12 +711,6 @@ msgid ""
 "Members and making other adjustments."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"At inCruises, we're on a mission to make travel more accessible, "
-"affordable, and even highly profitable for millions of people worldwide."
-msgstr ""
-
 #: /app/apps/main/controllers/active_partners.js
 msgid "Attention - Your Partner status is Inactive"
 msgstr ""
@@ -761,18 +719,6 @@ msgstr ""
 msgid ""
 "Be advised that Members must maintain an Active Membership throughout "
 "embarkation of any cruise where Reward Points were used to book the cruise."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"Because our Membership product is simply unmatched and our Members are "
-"always saving hundreds and even thousands of dollars on travel bookings."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"Because we offer a very lucrative, transparent, and generous compensation "
-"program."
 msgstr ""
 
 #: /app/apps/main/views/emails/invoices/senior_team_leader.html
@@ -814,6 +760,12 @@ msgstr ""
 
 #: /app/apps/main/controllers/booking_review.js
 msgid "Booking successfully reviewed."
+msgstr ""
+
+#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
+msgid ""
+"Boost your “TravelAbility” with additional income and incentives so you can "
+"travel bigger, better and more often."
 msgstr ""
 
 #: /app/apps/main/views/certificates/business-ownership.html
@@ -1286,10 +1238,6 @@ msgid ""
 "has the highest satisfaction rating."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Daily Residual Compensation"
-msgstr ""
-
 #: /app/apps/main/controllers/export.js
 msgid "Date Last received invitation (MM-DD-YYYY)"
 msgstr ""
@@ -1504,10 +1452,6 @@ msgid ""
 "days."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Enroll and Maintain 5 direct Members and have your Membership waived."
-msgstr ""
-
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder_3.html
 msgid ""
 "Everything is in place; Product, Technology, Compensation, Travel Partners, "
@@ -1526,10 +1470,6 @@ msgstr ""
 
 #: /app/apps/main/controllers/contacts.js
 msgid "Explode your reach with just one click."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Facebook Marketing tools"
 msgstr ""
 
 #: /app/apps/main/controllers/certificates.js
@@ -1638,9 +1578,7 @@ msgid "Gender"
 msgstr ""
 
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"Generate a part-time, or even full-time income with complete location "
-"freedom"
+msgid "Generate a lucrative additional part-time income stream."
 msgstr ""
 
 #: /app/apps/main/controllers/projection.js
@@ -1649,13 +1587,6 @@ msgstr ""
 
 #: /app/apps/main/views/emails/contacts/professional_member.html
 msgid "Get paid to cruise by simply referring others to join our program"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"Global New Production Bonus. Funded with 5% of your team's new Sales "
-"Volume, you can potentially earn tens of thousands of dollars per month "
-"just with this program."
 msgstr ""
 
 #: /app/apps/main/views/emails/push_notifications_center/app_update.html
@@ -1731,10 +1662,6 @@ msgstr ""
 
 #: /app/apps/main/views/emails/global_booking/post_booking_review.html
 msgid "Hello there %s,"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Here Are The Top Ways To Earn Compensation With inCruises:"
 msgstr ""
 
 #: /app/apps/main/views/emails/upgrade/new_membership_announcement.html
@@ -2015,7 +1942,6 @@ msgid ""
 "href=\"https://incruises.com/support\">https://incruises.com/support</a>"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder_2.html
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder_3.html
 msgid ""
@@ -2055,13 +1981,6 @@ msgid ""
 "If you have taken prior trips with <strong>inCruises</strong> please share "
 "how many trips you have taken and consider including some of the most "
 "popular benefits below:"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"If you haven't watched our amazing Partnership video that explains "
-"everything you need to know, please take a few minutes to watch it now. "
-"Click the image below to be taken directly to it:"
 msgstr ""
 
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder_2.html
@@ -2111,10 +2030,6 @@ msgid ""
 "your Reward Points being converted:"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "If you're looking to:"
-msgstr ""
-
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder_3.html
 msgid ""
 "If you're not sure, please take a few minutes to watch our amazing "
@@ -2129,9 +2044,8 @@ msgstr ""
 
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
 msgid ""
-"Imagine... You could be crossing off global destinations off of your bucket "
-"list faster than you ever dreamed of, plus have the lifestyle to actually "
-"make that happen for you and your family."
+"Imagine... You can travel better, help others do the same and enjoy an "
+"improved lifestyle with more time and money freedom."
 msgstr ""
 
 #: /app/apps/main/controllers/booking_review.js
@@ -2289,7 +2203,9 @@ msgid ""
 msgstr ""
 
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "inCruises may be just the business for you. Why?"
+msgid ""
+"inCruises may be a great fit for you if you’re looking to do any or all of "
+"the items below:"
 msgstr ""
 
 #: /app/apps/main/views/emails/refund_protocol/warning_user_its_keep.html
@@ -2333,10 +2249,6 @@ msgstr ""
 
 #: /app/apps/main/controllers/bonus.js
 msgid "Instant Bonus"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Instant Pay Bonuses of $50.00 to $150.00 (paid within 24 hours)"
 msgstr ""
 
 #: /app/apps/main/views/emails/recurring/failed.html
@@ -2448,10 +2360,6 @@ msgstr ""
 msgid "IP Greylist ID not found."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "iPhone app and Android apps"
-msgstr ""
-
 #: /app/apps/main/views/certificates/senior-team-leader.html
 msgid ""
 "IS MEMBERSHIP FREE AND HAS ENROLLED ONE DIRECT PARTNER WHO IS ALSO "
@@ -2551,10 +2459,6 @@ msgstr ""
 msgid "Leadership Bonus"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Leadership Bonuses ($300.00 to $55,000.00 per month)"
-msgstr ""
-
 #: /app/apps/main/views/emails/contacts/personal_no_ditto.html
 msgid "Let me know what you think,"
 msgstr ""
@@ -2609,10 +2513,6 @@ msgstr ""
 msgid ""
 "Look for your latest statement to review the details of this compensation "
 "payout."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Lots of marketing materials including videos, images and templates"
 msgstr ""
 
 #: /app/apps/main/controllers/user.js
@@ -2822,10 +2722,6 @@ msgstr ""
 msgid "Now, take a step back for a moment...and consider the following:"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Offer a high demand product in a trillion-dollar industry"
-msgstr ""
-
 #: /app/apps/main/components/membership.js
 #: /app/apps/main/controllers/recurring.js
 msgid "Official inCruises Partner"
@@ -2929,6 +2825,12 @@ msgid ""
 "with you within 24 hours of your activation as a Partner."
 msgstr ""
 
+#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
+msgid ""
+"Our Partners make all of these and much more happen by sharing a totally "
+"unrivaled Club Membership that always delivers unmatched value."
+msgstr ""
+
 #: /app/apps/main/views/emails/recurring/tmt_check.html
 msgid ""
 "Our records show you have not enrolled in the Trust My Travel Recurring "
@@ -2940,7 +2842,7 @@ msgid "Our Security Team needs to verify the payment you just made."
 msgstr ""
 
 #: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Own a low-risk, easy-to-manage, sellable, and will able lifestyle business"
+msgid "Own a low-risk, easy-to-manage, sellable and willable lifestyle business"
 msgstr ""
 
 #: /app/apps/main/compensation/quick_start.js
@@ -3141,6 +3043,12 @@ msgstr ""
 msgid "Please Read Carefully"
 msgstr ""
 
+#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
+msgid ""
+"Please review for more details about the generous INcome and INcentives "
+"available with inCruises."
+msgstr ""
+
 #: /app/apps/main/views/emails/invoices/create_invoice.html
 #: /app/apps/main/views/emails/invoices/power_tools.html
 msgid ""
@@ -3227,10 +3135,6 @@ msgstr ""
 
 #: /app/apps/main/controllers/bonus.js
 msgid "Producer Bonus"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Producer Bonuses of 250 Reward Points"
 msgstr ""
 
 #: /app/apps/main/views/emails/upgrade/three_hours.html
@@ -3367,6 +3271,12 @@ msgstr ""
 
 #: /app/apps/main/controllers/power_tools_upgrade.js
 msgid "Removed power tools from user"
+msgstr ""
+
+#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
+msgid ""
+"Replace or increase your full-time income with a career in a trillion "
+"dollar industry that has complete location freedom and huge upside."
 msgstr ""
 
 #: /app/apps/main/compensation/quick_start.js
@@ -3547,15 +3457,6 @@ msgstr ""
 msgid "Sincerely,<br>inCruises®"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"So if you're looking for a proven, fun, and genuine product that you can "
-"feel great about sharing, then take action to UPGRADE to Partner (one-time "
-"activation fee of $195) or UPGRADE to Partner-Member by paying the one-time "
-"Partner Activation fee of $195 + one-time Member Activation fee $100 + your "
-"first $100 monthly Membership fee."
-msgstr ""
-
 #: /app/apps/main/views/emails/recurring/tmt_check.html
 msgid ""
 "So take ACTION NOW, and either log out and log back into your inCruises "
@@ -3567,13 +3468,6 @@ msgstr ""
 msgid ""
 "So take ACTION NOW, and either log out and log back into your inCruises "
 "back office, OR click this invoice page link below:"
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"So what are you waiting for? Join inCruises today as a Partner-Member and "
-"potentially have commissions being deposited into your account as soon as "
-"tomorrow simply enrolling other Partner-Members."
 msgstr ""
 
 #: /app/apps/main/views/emails/upgrade/cruising.html
@@ -3836,10 +3730,6 @@ msgstr ""
 #: /app/apps/main/views/emails/invoices/senior_team_leader.html
 #: /app/apps/main/views/emails/upgrade/first_new_member.html
 msgid "Thank you for the privilege to serve you and your family."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Thank you for your interest in our unmatched business model."
 msgstr ""
 
 #: /app/apps/main/views/emails/compensation/daily_member_activation.html
@@ -4590,10 +4480,6 @@ msgid ""
 "payments made to inCruises giving great peace of mind and security."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Two main reasons:"
-msgstr ""
-
 #: /app/apps/main/views/emails/onboarding/unapproved.html
 msgid ""
 "Unfortunately, your InCruises Onboarding has been disapproved by an admin, "
@@ -5074,10 +4960,6 @@ msgid ""
 "business!"
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Weekly 100% Matching Bonuses"
-msgstr ""
-
 #: /app/apps/main/views/emails/bonus/weekly_bonus.html
 msgid "Weekly Bonus"
 msgstr ""
@@ -5149,24 +5031,10 @@ msgid ""
 "card in case you haven’t set up your recurring profile before."
 msgstr ""
 
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"When you upgrade to a Partner, we will provide you with a full suite of "
-"resources including:"
-msgstr ""
-
 #: /app/apps/main/views/emails/invoices/create_invoice.html
 msgid ""
 "While an invoice has been generated for your inCruises membership, your "
 "invoice is marked PAID."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid ""
-"While nearly every other company in our profession charges a monthly fee to "
-"access all of the tools, training, and for your own website, we provide "
-"everything to you at no monthly cost. It's all included in your $195 "
-"Partner Activation fee or the $395 Partner-Member Activation fee."
 msgstr ""
 
 #: /app/apps/main/views/emails/invoices/not_free.html
@@ -5316,6 +5184,12 @@ msgid ""
 "You are receiving this e-mail because your recurring Membership payment "
 "method <strong>ending in %s</strong> is about to <strong>expire</strong> "
 "and as a result your monthly Membership may <strong>not be paid</strong>."
+msgstr ""
+
+#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
+msgid ""
+"You are receiving this email because you requested more information about "
+"the inCruises Partnership Opportunity."
 msgstr ""
 
 #: /app/apps/main/views/emails/compensation/partner_status_inactive.html
@@ -5858,10 +5732,6 @@ msgstr ""
 msgid ""
 "Your onboarding information has been reset, feel free to fill out the "
 "agreement and onboarding questions again."
-msgstr ""
-
-#: /app/apps/main/views/emails/contacts/reminders/upgrade_reminder.html
-msgid "Your own personalized corporate email (yourname@incruises.com)"
 msgstr ""
 
 #: /app/apps/main/controllers/email_address.js
