Updated .pot files

--- a/server.pot
+++ b/server.pot
@@ -7939,7 +7939,7 @@ msgid ""
 "freeze, faint, or fight. And when you do one of these four things every "
 "time you are afraid or have pain, you’re going to be constantly running "
 "away, stopping and putting your life on hold, fainting or fighting. That is "
-"no way to live. Right? "
+"no way to live. Right?"
 msgstr ""
 
 #: Course Questions
@@ -7948,10 +7948,10 @@ msgid ""
 "recommendations:\t\t"
 msgstr ""
 
-#: Course Questions (reasons)
+#: Course Questions
 msgid ""
 "Your habits are your future. You can make it easier on yourself to break "
-"bad habits by avoiding the situations and triggers that cause them. "
+"bad habits by avoiding the situations and triggers that cause them."
 msgstr ""
 
 #: Course Questions
@@ -7982,19 +7982,19 @@ msgstr ""
 msgid "During these times, Michael “Hutch” suggests that you:\t"
 msgstr ""
 
-#: Course Questions (reasons)
+#: Course Questions
 msgid ""
 "Michael “Hutch” often says that: “Ships don’t sink because of the water "
 "around them. Ships sink because of the water that gets in them.” Therefore, "
 "you must NOT allow Chaos From the Outside to Get Inside You. And you must "
-"spend less time with those who rob you of your positive energy. "
+"spend less time with those who rob you of your positive energy."
 msgstr ""
 
 #: Course Questions
 msgid ""
 "According to Michael “Hutch,” shifting your emotional patterns is the key "
 "to shaping your decisions, actions, and life. Remember, it is your duty and "
-"moral obligation to: "
+"moral obligation to:"
 msgstr ""
 
 #: Course Questions
@@ -8232,7 +8232,7 @@ msgid ""
 msgstr ""
 
 #: Course Questions
-msgid " According to Michael Hutch:"
+msgid "According to Michael Hutch:"
 msgstr ""
 
 #: Course Questions
@@ -8240,16 +8240,6 @@ msgid ""
 "Leaders, your role is to convey meaning and share a way of understanding "
 "things; influence your team’s ____________. Choose the correct word to fill "
 "in the blank:"
-msgstr ""
-
-#: Course Questions
-msgid ""
-"Leadership is all about you. Leadership starts with you, and it is 100% "
-"about you! "
-msgstr ""
-
-#: Course Questions
-msgid "According to Michael Hutch:"
 msgstr ""
 
 #: Course Questions
@@ -8296,8 +8286,8 @@ msgstr ""
 
 #: Course Questions
 msgid ""
-" If you do not get 1 Registration Per Day for the 1st 10 Days of Each "
-"Month, you should beat yourself up and slap yourself in the face."
+"If you do not get 1 Registration Per Day for the 1st 10 Days of Each Month, "
+"you should beat yourself up and slap yourself in the face."
 msgstr ""
 
 #: Course Questions (reasons)
@@ -8566,7 +8556,7 @@ msgid ""
 "True or False? Michael suggests that every day, do something to positively "
 "feed your mind by reading or listening to educational podcasts. He promises "
 "when you do that, even if you just made that a habit, say even five days a "
-"week, it'll change your life. "
+"week, it'll change your life."
 msgstr ""
 
 #: Course Questions
@@ -8578,7 +8568,7 @@ msgstr ""
 #: Course Questions
 msgid ""
 "True or False? The more you focus on learning how to become your best self "
-"and achieve your goals, the more positive impact you'll have. "
+"and achieve your goals, the more positive impact you'll have."
 msgstr ""
 
 #: Course Questions
@@ -8587,7 +8577,7 @@ msgid ""
 "everything, and that's why they're miserable. He wants you to say no, so "
 "you can check requests against your Vision and Mission. However,  Michael "
 "doesn't want you to say yes or commit to any projects that take you off "
-"track. "
+"track."
 msgstr ""
 
 #: Course Questions
@@ -8605,27 +8595,6 @@ msgstr ""
 msgid ""
 "Michael shares these 5 Proven Essentials For Staying Focused during adverse "
 "times:"
-msgstr ""
-
-#: Course Questions
-msgid ""
-" Michael suggests you take a careful look at what distracts you and "
-"interrupts your correct focus. He recommends you:"
-msgstr ""
-
-#: Course Questions
-msgid ""
-"True or False? The more you focus on learning how to become your best self "
-"and achieve your goals, the more positive impact you'll have."
-msgstr ""
-
-#: Course Questions
-msgid ""
-"True or False? Michael recognizes that many people have said yes to "
-"everything, and that's why they're miserable. He wants you to say no, so "
-"you can check requests against your Vision and Mission. However,  Michael "
-"doesn't want you to say yes or commit to any projects that take you off "
-"track."
 msgstr ""
 
 #: Course Questions
@@ -8662,7 +8631,7 @@ msgstr ""
 msgid ""
 "Michael recommends you lower your standards and keep a positive "
 "perspective. Sometimes good enough is good enough. Everything doesn't have "
-"to be done with the highest level of perfection. "
+"to be done with the highest level of perfection."
 msgstr ""
 
 #: Course Questions
@@ -8687,8 +8656,8 @@ msgstr ""
 
 #: Course Questions
 msgid ""
-" Partners will not be able to claim INcome or INcentives during any time "
-"they are not up-to-date with Partnership renewals. "
+"Partners will not be able to claim INcome or INcentives during any time "
+"they are not up-to-date with Partnership renewals."
 msgstr ""
 
 #: Course Questions
@@ -8704,7 +8673,7 @@ msgstr ""
 #: Course Questions
 msgid ""
 "Daily Activation Bonus is usually added to Partner’s inCruises wallet "
-"within 24 hours "
+"within 24 hours"
 msgstr ""
 
 #: Course Questions
@@ -8750,7 +8719,7 @@ msgid ""
 msgstr ""
 
 #: Course Questions
-msgid "To earn Team Leadership Bonus a rank leader must: "
+msgid "To earn Team Leadership Bonus a rank leader must:"
 msgstr ""
 
 #: Course Questions
@@ -8824,7 +8793,7 @@ msgstr ""
 msgid ""
 "Membership Free Marketing Director and above leaders become eligible to "
 "earn Recurring Income on more levels by advancing rank and developing "
-"direct Partners who are Membership Free. "
+"direct Partners who are Membership Free."
 msgstr ""
 
 #: Course Questions
@@ -8873,13 +8842,13 @@ msgid ""
 "Each time you have 5 direct paying Members in a month, inCruises waives "
 "your $100 dollar monthly Membership payment. You still receive your 200 (2 "
 "for 1) Reward Points just as if you had paid your $100 monthly Membership "
-"payment. "
+"payment."
 msgstr ""
 
 #: Course Questions
 msgid ""
 "Direct Partner Members who are also Membership Free also count towards the "
-"5 paying Members you need to be Membership Free. "
+"5 paying Members you need to be Membership Free."
 msgstr ""
 
 #: Course Questions
@@ -8890,9 +8859,9 @@ msgstr ""
 
 #: Course Questions
 msgid ""
-" A one-time $500.00 Fast Start bonus replaces your Team Leadership Bonus "
+"A one-time $500.00 Fast Start bonus replaces your Team Leadership Bonus "
 "when you reach Marketing Director before the end of your first full "
-"calendar month. "
+"calendar month."
 msgstr ""
 
 #: Course Questions
@@ -8918,6 +8887,18 @@ msgstr ""
 msgid ""
 "Any of the inCruises inCome and inCentive  discussions in this presentation "
 "were for hypothetical purposes and are not guarantees of future performance."
+msgstr ""
+
+#: Course Questions
+msgid "2 Teststatatsatsat."
+msgstr ""
+
+#: Course Questions
+msgid "  TEst 3 aeqeqw.                                           "
+msgstr ""
+
+#: Course Questions
+msgid "4 Final Suuuuu."
 msgstr ""
 
 #: Course Questions (reasons)
@@ -9771,9 +9752,23 @@ msgstr ""
 
 #: Course Questions (reasons)
 msgid ""
+"Your habits are your future. You can make it easier on yourself to break "
+"bad habits by avoiding the situations and triggers that cause them. "
+msgstr ""
+
+#: Course Questions (reasons)
+msgid ""
 "Remember, community, like family, is everything and right now we could all "
 "use a little more of it. Your people have committed to you - it’s time to "
 "commit more to them."
+msgstr ""
+
+#: Course Questions (reasons)
+msgid ""
+"Michael “Hutch” often says that: “Ships don’t sink because of the water "
+"around them. Ships sink because of the water that gets in them.” Therefore, "
+"you must NOT allow Chaos From the Outside to Get Inside You. And you must "
+"spend less time with those who rob you of your positive energy. "
 msgstr ""
 
 #: Course Questions (reasons)
