Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -18377,6 +18377,12 @@ msgstr ""
 
 #: pages/upgrade.vue
 msgid ""
+"You may not become an InCruises member in your country of residence. For "
+"more information please contact support."
+msgstr ""
+
+#: pages/upgrade.vue
+msgid ""
 "You may not become an InCruises Partner in your country of residence. For "
 "more information please contact support."
 msgstr ""
