Updated .pot files

--- a/server.pot
+++ b/server.pot
@@ -7148,6 +7148,10 @@ msgstr ""
 msgid "How inCruises INcome and INcentives work"
 msgstr ""
 
+#: Courses
+msgid "The Ten Habits to Stop Now, Your Not to Do List"
+msgstr ""
+
 #: Courses (descriptions)
 msgid ""
 "In order to access your inCruises® Wallet, you must complete this course on "
@@ -7330,6 +7334,13 @@ msgid ""
 "Learn how our Partner program makes it possible to earn generous INcome and "
 "INcentives that can literally power your INspired journey to whatever "
 "heights you want to take it."
+msgstr ""
+
+#: Courses (descriptions)
+msgid ""
+"During this brief course, Michael \"Hutch\" Hutchinson will elaborate on "
+"ten stress-producing, and widespread habits, that Partners must strive to "
+"eliminate."
 msgstr ""
 
 #: Course Questions
