Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -15513,6 +15513,12 @@ msgstr ""
 msgid "There was an error with your request, please try again."
 msgstr ""
 
+#: pages/cruise.vue
+msgid ""
+"There was an issue retrieving the info for this cruise. Please try again or "
+"contact support."
+msgstr ""
+
 #: pages/certificates.vue
 #: controllers/certificates.js
 msgid "There was an issue updating your name format."
