Updated .pot files

--- a/client.pot
+++ b/client.pot
@@ -2818,12 +2818,6 @@ msgstr ""
 msgid "All Languages"
 msgstr ""
 
-#: pages/global_summit_2023.vue
-msgid ""
-"All Leaders on the Leaderboard Top100 on March 31,2023 will earn a 10% "
-"bonus on all GLS pts earned up to that date."
-msgstr ""
-
 #: pages/receipts.vue
 msgid "All Partner"
 msgstr ""
@@ -3176,6 +3170,10 @@ msgstr ""
 
 #: pages/booking.vue
 msgid "April"
+msgstr ""
+
+#: pages/global_summit_2023.vue
+msgid "April 1, 2023 - June 20, 2023 Bonus Opportunity!"
 msgstr ""
 
 #: pages/support.vue
@@ -9375,10 +9373,6 @@ msgid "January"
 msgstr ""
 
 #: pages/global_summit_2023.vue
-msgid "January 1, 2023 - March 31, 2023 Bonus Opportunity!"
-msgstr ""
-
-#: pages/global_summit_2023.vue
 #: pages/global_summit_dr.vue
 msgid "January 1, 2023, and August 31, 2023"
 msgstr ""
@@ -9578,21 +9572,21 @@ msgid ""
 "bonus on all GLS pts earned to date."
 msgstr ""
 
+#: pages/global_summit_2023.vue
+msgid ""
+"Leaders who have not already met their minimum direct Partner qualification "
+"(ND-ED Activates 8 Direct NEW Partners or BoD's who Activate 4 Direct New "
+"Partners) and do so between April 1, 2023 and June 30, 2023 become eligible "
+"to receive an additional $500.00 travel money so $1,500.00 total if they "
+"finish in the top 100 at contest end."
+msgstr ""
+
 #: pages/global_summit_dr.vue
 msgid ""
 "Leaders who meet their minimum direct Partner qualifications (ND-ED "
 "Activates 8 Direct NEW Partners or BoD w/ 4 receive) in stage 1 become "
 "eligible to receive an additional $1,000.00 travel money so 2K total if "
 "they finish in the top 100 at contest end."
-msgstr ""
-
-#: pages/global_summit_2023.vue
-msgid ""
-"Leaders who meet their minimum direct Partner qualifications (ND-ED "
-"Activates 8 Direct NEW Partners or BoD’s who Activate 4 Direct New "
-"Partners) before March 31, 2023 become eligible to receive an additional "
-"$1,000.00 travel money so $2,000.00 total if they\n"
-"\t\t\t\t\t\t\t\t\t\tfinish in the top 100 at contest end."
 msgstr ""
 
 #: pages/public/leadership.vue
